--- a/frontend/JokeeSingleServing/JokeeSingleServing/wwwroot/css/site.css
+++ b/frontend/JokeeSingleServing/JokeeSingleServing/wwwroot/css/site.css
@@ -1,18 +1,131 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+}
+
+body {
+    margin: 0;
+}
+
+<style >
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+}
+
+/* Style the header */
+.header {
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
+    border-bottom: 1px solid #DDDDDD;
+    display: flex;
+    justify-content: space-between;
+}
+
+/* Style the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+    /* Style the topnav links */
+    .topnav a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+        /* Change color on hover */
+        .topnav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+/* Create three unequal columns that floats next to each other */
+.column {
+    float: left;
+    padding: 10px;
+}
+
+    /* Left and right column */
+    .column.side {
+        width: 25%;
+    }
+
+    /* Middle column */
+    .column.middle {
+        width: 50%;
+    }
+
+/* Clear floats after the columns */
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column.side, .column.middle {
+        width: 100%;
+    }
+}
+
+/* Style the footer */
+.footer {
+    padding: 10px;
+    text-align: center;
+    width: 100% !important;
+    z-index: 10;
+    position: relative;
+    bottom: 0 !important;
+}
+
+.banner {
+    background-color: #29b363;
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center
+}
+.content{
+    justify-content: center;
+}
+.text {
+    padding: 30px;
+    min-height: 300px;
+    font-size: x-large;
+}
+.selections {
+    min-height: 100px;
+    align-items: center;
+    display: grid;
+    text-align: center;
+}
+button[type=submit] {
+    padding: 15px 25px 15px 25px;
+    margin: 10px;
+    border-radius: 5px
 }
